change v2raya path

--- a/.github/workflows/x86-lede.yml
+++ b/.github/workflows/x86-lede.yml
@@ -57,10 +57,10 @@ jobs:
         git clone -b master --depth=1 https://github.com/rufengsuixing/luci-app-onliner
         git clone -b master --depth=1 https://github.com/vernesong/OpenClash
         svn co https://github.com/zxlhhyccc/luci-app-v2raya/trunk/ luci-app-v2raya/
-        svn co https://github.com/immortalwrt/packages/trunk/net/v2raya/ v2raya/
         cd /build/lede
         ./scripts/feeds update -a
         ./scripts/feeds install -a
+        svn co https://github.com/immortalwrt/packages/trunk/net/v2raya/ feeds/packages/net/v2raya/
         wget -O /build/lede/x86-lede.buildinfo https://raw.githubusercontent.com/we2oxy/Build-Lede/master/buildinfo/x86-lede.buildinfo
         cat /build/lede/x86-lede.buildinfo > "/build/lede/.config"
         ./scripts/feeds install -a
