--- a/.github/workflows/x86-lede-1701.yml
+++ b/.github/workflows/x86-lede-1701.yml
@@ -57,11 +57,12 @@ jobs:
         git clone -b master --depth=1 https://github.com/vernesong/OpenClash
         svn co https://github.com/zxlhhyccc/luci-app-v2raya/trunk/ luci-app-v2raya/
         cd /build/lede-1701
-        rm -rf feeds/packages/libs/libcap package/feeds/luci/luci-app-dawn
         ./scripts/feeds update -a
+        rm -rf feeds/packages/libs/libcap package/feeds/luci/luci-app-dawn
         svn co https://github.com/immortalwrt/immortalwrt/trunk/package/libs/libcap feeds/packages/libs/libcap
         svn co https://github.com/coolsnowwolf/packages/trunk/net/dawn feeds/packages/net/dawn
         svn co https://github.com/immortalwrt/packages/trunk/net/v2raya/ feeds/packages/net/v2raya/
+        svn co https://github.com/coolsnowwolf/packages/trunk/lang/node-yarn feeds/packages/net/node-yarn/
         ./scripts/feeds install -a
         wget -O /build/lede-1701/x86-lede-1701.buildinfo https://raw.githubusercontent.com/we2oxy/Build-Lede/master/buildinfo/x86-lede-1701.buildinfo
         cat /build/lede-1701/x86-lede-1701.buildinfo > "/build/lede-1701/.config"
