--- a/.github/workflows/x86-lede-1701.yml
+++ b/.github/workflows/x86-lede-1701.yml
@@ -88,6 +88,7 @@ jobs:
         svn co https://github.com/we2oxy/OpenWrtConfig/trunk/files/etc /build/lede-1701/files/etc
         wget -O /build/lede-1701/files/etc/ssrplus/direct_microsoft.txt https://raw.githubusercontent.com/1715173329/ssrplus-routing-rules/master/direct/microsoft.txt
         cat /build/lede-1701/files/etc/ssrplus/direct_microsoft.txt >> /build/lede-1701/files/etc/ssrplus/white.list
+        cat /build/lede-1701/files/etc/ssrplus/white.list
         cp -R /build/lede-1701/files/etc/ssrplus/ /build/lede-1701/files/etc/vssr/
         rm -rf /build/lede-1701/files/etc/.svn/
         ls -lahR /build/lede-1701/files/
