--- a/.github/workflows/Phicomm_N1.yml
+++ b/.github/workflows/Phicomm_N1.yml
@@ -8,10 +8,10 @@ on:
         description: 'SSH connection to Actions'
         required: false
         default: 'false'
-  schedule:
-    - cron:  '40 15 * * 4'
-  watch:
-    types: started
+  # schedule:
+    # - cron:  '40 15 * * 4'
+  # watch:
+    # types: started
 
 jobs:
   flippy-N1:
